building out a very basic addition of the Test_Core .netStandard project for a domain part to test and neaten up the clean architecture part of this learning application

--- a/Full_Arch_UWP_Autofac/Views/OtherPage.xaml
+++ b/Full_Arch_UWP_Autofac/Views/OtherPage.xaml
@@ -13,11 +13,13 @@
             <TextBlock Text="OtherPage"
                        />
             <Button x:Name="ButtonDoPopup"
-                    Content="DoPopup"
+                    Content="Get the secret text from Domain logic"
                     Command="{Binding OtherButtonClickCommand}"
                     CommandParameter="{Binding ElementName=ButtonDoPopup}"
                     Margin="10,10,0,0">
             </Button>
+            <TextBox Text="{Binding TextBoxText,Mode=OneWay}"
+                     Margin="10"/>
         </StackPanel>
 
     </Grid>
