All of it works. Except fora Style reference error of the path=background of the radiobutton when clicked....

--- a/Full_Arch_UWP_Autofac/ShellPage.xaml
+++ b/Full_Arch_UWP_Autofac/ShellPage.xaml
@@ -29,12 +29,12 @@
                                  GroupName="Group1"
                                  Style="{StaticResource NavigationButtonStyle}"
                                  IsChecked="{Binding MainPageSelected,Mode=TwoWay}"
-                                 Content="MainPage"/>
+                                 Content="WriteDebug"/>
                     <RadioButton x:Name="Option2"
                                  GroupName="Group1"
                                  Style="{StaticResource NavigationButtonStyle}"
                                  IsChecked="{Binding OtherPageSelected, Mode=TwoWay}"
-                                 Content="OtherPage"/>
+                                 Content="GetSecret"/>
                 </StackPanel>
             </Grid>
 
