Cleaned up the XAML view, and splitPane.

--- a/Full_Arch_UWP_Autofac/ShellPage.xaml
+++ b/Full_Arch_UWP_Autofac/ShellPage.xaml
@@ -9,32 +9,24 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <SplitView x:Name="NavigationPane"
-               DisplayMode="CompactInline"
+               DisplayMode="Inline"
                IsPaneOpen="True"
-               OpenPaneLength="140"
+               OpenPaneLength="40"
                >
         <SplitView.Pane>
             <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="44" />
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Button x:Name="HamburgerButton" 
-                        Grid.Row="0" 
-                        Style="{StaticResource MenuItemButtonStyle}" />
                 <StackPanel x:Name="NavigationMenu" 
-                            Orientation="Vertical" 
-                            Grid.Row="1">
+                            Orientation="Vertical">
                     <RadioButton x:Name="Option1"
                                  GroupName="Group1"
-                                 Style="{StaticResource NavigationButtonStyle}"
+                                 Style="{StaticResource AllStarNavigationButtonStyle}"
                                  IsChecked="{Binding MainPageSelected,Mode=TwoWay}"
-                                 Content="WriteDebug"/>
+                                 Tag="&#59155;"/>
                     <RadioButton x:Name="Option2"
                                  GroupName="Group1"
-                                 Style="{StaticResource NavigationButtonStyle}"
+                                 Style="{StaticResource AllStarNavigationButtonStyle}"
                                  IsChecked="{Binding OtherPageSelected, Mode=TwoWay}"
-                                 Content="GetSecret"/>
+                                 Tag="&#59189;"/>
                 </StackPanel>
             </Grid>
 
