--- a/Full_Arch_UWP_Autofac/Themes/Generic.xaml
+++ b/Full_Arch_UWP_Autofac/Themes/Generic.xaml
@@ -88,4 +88,73 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+
+
+    <Style TargetType="RadioButton" x:Name="AllStarNavigationButtonStyle" x:Key="AllStarNavigationButtonStyle">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="MinHeight" Value="{ThemeResource ListViewItemMinHeight}"/>
+        <Setter Property="MinWidth" Value="{ThemeResource SplitViewCompactPaneThemeLength}" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RadioButton">
+                    <Grid x:Name="RootGrid">
+
+                        <VisualStateManager.VisualStateGroups>
+                            <VisualStateGroup x:Name="CheckedStates">
+                                <VisualState x:Name="Checked">
+                                    <Storyboard>
+                                        <ColorAnimation Storyboard.TargetName="Brush" 
+                                                        Storyboard.TargetProperty="Color" 
+                                                        
+                                                        To="Blue" Duration="0:0:0" 
+                                                        FillBehavior="HoldEnd" />
+                                    </Storyboard>
+                                </VisualState>
+                                <VisualState x:Name="Unchecked" />
+                                <VisualState x:Name="Indeterminate" />
+                            </VisualStateGroup>
+                        </VisualStateManager.VisualStateGroups>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="4" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        
+                        <Rectangle Grid.Column="0">
+                            <Rectangle.Fill>
+                                <SolidColorBrush x:Name="Brush" 
+                                                 >
+                                </SolidColorBrush>
+                            </Rectangle.Fill>
+                        </Rectangle>
+
+                        <FontIcon Grid.Column="1" 
+                                  VerticalAlignment="Center" 
+                                  HorizontalAlignment="Center" 
+                                  Margin="8,8,8,8" 
+                                  FontFamily="{ThemeResource SymbolThemeFontFamily}" 
+                                  Glyph="{TemplateBinding Tag}">
+                        </FontIcon>
+                        
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+
 </ResourceDictionary>
+
+
+
+<!-- Removed the following code completely:
+    Within <ColorAnimation:
+        Color="{Binding Path=Background}"
+    Within SolidColorBrush:
+        From="{Binding Path=Background}"
+    
+        <Grid.RowDefinitions>
+            <RowDefinition Height="44" />
+        </Grid.RowDefinitions>
+    -->
