added another page to test dynamic type list bounded data to the datagrid.  It works.

--- a/Full_Arch_UWP_Autofac/ShellPage.xaml
+++ b/Full_Arch_UWP_Autofac/ShellPage.xaml
@@ -27,6 +27,11 @@
                                  Style="{StaticResource AllStarNavigationButtonStyle}"
                                  IsChecked="{Binding OtherPageSelected, Mode=TwoWay}"
                                  Tag="&#59189;"/>
+                    <RadioButton x:Name="Option3"
+                                 GroupName="Group1"
+                                 Style="{StaticResource AllStarNavigationButtonStyle}"
+                                 IsChecked="{Binding DataGridPageSelected, Mode=TwoWay}"
+                                 Tag="&#59165;"/>
                 </StackPanel>
             </Grid>
 
@@ -47,3 +52,4 @@
         </SplitView.Content>
     </SplitView>
 </Page>
+<!--Segoe MDL Assets-->
