Building out a proto-type of multiple rules, new page

--- a/Full_Arch_UWP_Autofac/ShellPage.xaml
+++ b/Full_Arch_UWP_Autofac/ShellPage.xaml
@@ -35,7 +35,7 @@
                     <RadioButton x:Name="Option4"
                                  GroupName="Group1"
                                  Style="{StaticResource AllStarNavigationButtonStyle}"
-                                 IsChecked="{Binding ListViewPageSelected, Mode=TwoWay}"
+                                 IsChecked="{Binding FakeRulePageSelected, Mode=TwoWay}"
                                  Tag="&#xE709;"/>
                 </StackPanel>
             </Grid>
