Building out a proto-type of multiple rules, new page. V2

--- a/Full_Arch_UWP_Autofac/Views/FakeRulePage.xaml
+++ b/Full_Arch_UWP_Autofac/Views/FakeRulePage.xaml
@@ -21,7 +21,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Grid.Column="0">
-            <controls:DataGrid Name="RBTATM" GridLinesVisibility="All" HorizontalGridLinesBrush="AliceBlue"
+            <controls:DataGrid Name="RBTATM" GridLinesVisibility="All"
                                AlternatingRowBackground="Gray" AutoGenerateColumns="False"
                                ItemsSource="{Binding RBTATMRules,Mode=TwoWay}">
                 <controls:DataGrid.Columns>
